Localhoost DB-Verbindung aufgebaut, Teil 3 Final Erste API-Anweisungen werden erfolgreich ausgeführt und in der DB erfasst.

--- a/Calcusino/appsettings.json
+++ b/Calcusino/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CalcusinoDB;User=root;Password=MySQLRootPassword2205!;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
