--- a/Calcusino/Properties/launchSettings.json
+++ b/Calcusino/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -10,10 +11,11 @@
     "Calcusino": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "Login",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      }
     }
   },
   "iisSettings": {
